--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -55,6 +55,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	</head>
 
 	<body>
+		<svg style="display: none;">
+			<symbol viewBox="0 0 24 24" id="ic-link"><path fill="currentColor" d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"></path></symbol>
+		</svg>
 		<Header />
 		<main>
 			<article>
@@ -83,3 +86,21 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<Footer />
 	</body>
 </html>
+<!-- <script>
+	const headings = document.querySelectorAll(".prose h2, .prose h3, .prose h4, .prose h5, .prose h6") ?? []
+
+	const spaces = /[ _]/g
+	const nope = /[¿?¡!'".:,;$&()=]/g
+	for(const h of headings) {
+		if (!(h instanceof HTMLElement)) continue
+		const id = h.innerText.toLowerCase().replaceAll(spaces, "-").replaceAll(nope, "")
+
+		const link = document.createElement("a")
+		link.innerHTML = `<svg><use href="#ic-link"/></svg>`
+
+		
+		link.href = "#"+id
+		h.id = id
+		h.appendChild(link)
+	}
+</script> -->
